--- a/StudentInfoUpdate/Views/Shared/_Layout.cshtml
+++ b/StudentInfoUpdate/Views/Shared/_Layout.cshtml
@@ -8,30 +8,18 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Student")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+   @Html.Partial("_NavBar")
     <div class="container body-content">
         @RenderBody()
         <hr />
+        <br />
+        <br />
         <footer>
-            <p>&copy; @DateTime.Now.Year - This website was proudly brought to you by CodeTek</p>
+            @*<p>&copy; @DateTime.Now.Year - This website was proudly brought to you by CodeTek</p>*@
+            @*<span class="badge badge-light">&copy; @DateTime.Now.Year - This website was proudly brought to you by CodeTek</span>*@
+
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="" data-original-title="This is the development team that created this application">&copy; @DateTime.Now.Year - This Application was proudly brought to you by CodeTek</button>
+
         </footer>
     </div>
 
