--- a/StudentInfoUpdate/Views/Student/Details.cshtml
+++ b/StudentInfoUpdate/Views/Student/Details.cshtml
@@ -6,9 +6,13 @@
 }
 
 <h2>Details</h2>
-
+<br />
+<ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/Student/Index">Home</a></li>
+    <li class="breadcrumb-item active">Details</li>
+</ol>
 <div>
-    <h4>Student</h4>
+    <h4>Student Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -67,9 +71,10 @@
             @Html.DisplayName("Active")
         </dd>
 
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+ <h5>   @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")</h5>
 </p>
