--- a/StudentInfoUpdate/Views/Student/Index.cshtml
+++ b/StudentInfoUpdate/Views/Student/Index.cshtml
@@ -1,86 +1,126 @@
-﻿@model IEnumerable<StudentInfoUpdate.Models.Student>
+﻿@*@using PagedList;
+@using PagedList.Mvc;*@
+
+@model IEnumerable<StudentInfoUpdate.Models.Student>
+
+
+
+
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>List of Active Students</h2>
 
-<p>
+
+<h2>List of Active Students</h2>
+<br />
+<ol class="breadcrumb">
+    <li class="breadcrumb-item active">Home</li>
+</ol>
+@*<ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item active">Library</li>
+    </ol>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Library</a></li>
+        <li class="breadcrumb-item active">Data</li>
+    </ol>*@
+
+<h5>
     @Html.ActionLink("Create New", "Create")
-</p>
+</h5>
 
 <form asp-controller="Student" asp-action="Index">
-    <p>
-        <p>You may search by Name, Surname, or Student Number</p>
-        <input type="text" name="SearchString">
-        <input type="submit" value="Filter" />
 
+    <p>You may search by Name, Surname, or Student Number</p>
+    <input type="text" name="SearchString" />
+    <input type="submit" class="btn btn-primary" value="Filter" />
 
-    </p>
-</form> 
+    @*<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="" data-original-title="Filter students based on search">Filter</button>*@
+
+  
+</form>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayName("Student Number")
+            @Html.DisplayNameFor(model => model.First().Student_No)
         </th>
         <th>
-            @Html.DisplayName("Name")
+            @Html.DisplayNameFor(model => model.First().Name)
         </th>
         <th>
-            @Html.DisplayName("Surname")
+            @Html.DisplayNameFor(model => model.First().Surname)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.First().Email)
         </th>
         <th>
-            @Html.DisplayName("Address")
+            @Html.DisplayNameFor(model => model.First().Address)
         </th>
         <th>
-            @Html.DisplayName("Mobile Number")
+            @Html.DisplayNameFor(model => model.First().Mobile_No)
         </th>
         <th>
-            @Html.DisplayName("Image")
+            @Html.DisplayNameFor(model => model.First().Completed)
         </th>
         <th>
-            @Html.DisplayName("Status")
+            @Html.DisplayNameFor(model => model.First().ImageUri)
         </th>
+
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Student_No)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Surname)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Address)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Mobile_No)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.FileUpload)
-    </td>
-    <td>
-        @Html.DisplayName("Active")
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Student_No)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Surname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Mobile_No)
+            </td>
+            <td>
+                @Html.DisplayName("Active")
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.ThumbnailUri)
+                </td*@>
+
+
+            <td>
+                @Html.ActionLink("Get", "Get", new { id = item.Id })
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
+ 
 
 </table>
+
+
+    @*@Html.PagedListPager(Model, page => Url.Action("Index", new { page, }),
+    new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation =true,
+    DisplayItemSliceAndTotal=true}
+
+    )*@
+    
+
